Added CSS and <nav>

--- a/artists.html
+++ b/artists.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Best Song</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-    <section>
-      <ul>
-        <li><a href="index.html">About Me</a></li>
-        <li><a href="beats.html">Making Beats</a></li>
-        <li><a href="artists.html">Favorite Video</a></li>
-      </ul>
-      <h1>My Favorite Video</h1>
-      <h3>"Rainbow Connection" by Kermit the Frog</h3>
-      <iframe src="https://www.youtube.com/embed/v8enlTBXR5Y"></iframe>
-      <p>This video is my go-to when I'm in a bad mood </p>
-      <p>It's a simultaniously unserious and emotional performance, the contrast of the song and the singer make it so unique</p>
-    </section>
+      <div class="navbar">
+        <a href="index.html">About Me</a>
+        <a href="beats.html">Beat Making</a>
+        <a href="artists.html">Favorite Song</a>
+      </div>
+
+      <section>
+        <h1>My Favorite Video</h1>
+        <h3>"Rainbow Connection" by Kermit the Frog</h3>
+        <iframe src="https://www.youtube.com/embed/v8enlTBXR5Y"></iframe>
+        <p>This video is my go-to when I'm in a bad mood </p>
+        <p>It's a simultaniously unserious and emotional performance, the contrast of the song and the singer make it so unique!</p>
+      </section>
   </body>
 </html>
