--- a/beats.html
+++ b/beats.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Making Beats</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-    <section>
-      <ul>
-        <li><a href="index.html">About Me</a></li>
-        <li><a href="beats.html">Making Beats</a></li>
-        <li><a href="artists.html">Favorite Video</a></li>
-      </ul>
-    </section>
+    <div class="navbar">
+      <a href="index.html">About Me</a>
+      <a href="beats.html">Beat Making</a>
+      <a href="artists.html">Favorite Song</a>
+    </div>
 
     <section>
       <h1>How To Make a Song</h1>
