--- a/beats.html
+++ b/beats.html
@@ -25,7 +25,7 @@
       <img src="media/beat.png" alt="Picture of FL Studio music software creating a beat using the step sequencer">
       <img src="media/writing-lyrics.jpg" alt="Picture of person writing lyrics on paper with a guitar in their hands">
       <img src="media/recording.jpg" alt="Picture of mic inside music recording booth">
-      <img src="media/mixing.jpg" alt="Picture of a professional mixing board for music production"">
+      <img src="media/mixing.jpg" alt="Picture of a professional mixing board for music production">
     </section>
   </body>
 </html>
