--- a/artists.html
+++ b/artists.html
@@ -13,7 +13,7 @@
         <a href="artists.html">Favorite Song</a>
       </div>
 
-      <section>
+      <section class="center_custom">
         <h1>My Favorite Video</h1>
         <h3>"Rainbow Connection" by Kermit the Frog</h3>
         <iframe src="https://www.youtube.com/embed/v8enlTBXR5Y"></iframe>
