--- a/artists.html
+++ b/artists.html
@@ -14,11 +14,11 @@
       </div>
 
       <section class="center_custom">
-        <h1>My Favorite Video</h1>
-        <h3>"Rainbow Connection" by Kermit the Frog</h3>
+        <h1  class="center_custom">My Favorite Video</h1>
+        <h3  class="center_custom">"Rainbow Connection" by Kermit the Frog</h3>
         <iframe src="https://www.youtube.com/embed/v8enlTBXR5Y"></iframe>
-        <p>This video is my go-to when I'm in a bad mood </p>
-        <p>It's a simultaniously unserious and emotional performance, the contrast of the song and the singer make it so unique!</p>
+        <p  class="center_custom">This video is my go-to when I'm in a bad mood </p>
+        <p  class="center_custom">It's a simultaniously unserious and emotional performance, the contrast of the song and the singer make it so unique!</p>
       </section>
   </body>
 </html>
